--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -317,7 +317,7 @@
           <div class="interestText">
             <span class="interest-content">The world of aviation fascinates me. <br> <br>Click to watch a video of my self-built drone.</span>
           </div>
-          <%= image_tag ("drone.jpeg"), :class=>"image row" %>
+          <%= image_tag ("drone.jpg"), :class=>"image row" %>
         </div>
 
         <div class="col-xs-4 col-xs-offset-0 interest">
