added new image

--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -10,8 +10,15 @@
       </div>
     </div>
     <h4 class="title-quote">"Reach for the stars"</h4>
-    <div class="aboutmeContent col-xs-8">
-      <p>Born in a small town in Germany, I have already seen and done a lot in my 20 years in this world. As my most recent undertaking, I have decided to pursue my interest in web development and become serious in this domain. I am fascinated with the power of this tool and it's potential to change so many people's lives. That being said, I am very enthousiastic about working on projects that make a positive difference. Please do reach out to me, should you be interested in working together.</p>
+    <div class="row personal-desc">
+      <span class="helper"></span>
+      <div class="aboutmeContent col-xs-8">
+        <p>Born in a small town in Germany, I have already seen and done a lot in my 20 years in this world. As my most recent undertaking, I have decided to pursue my interest in web development and become serious in this domain. I am fascinated with the power of this tool and it's potential to change so many people's lives. That being said, I am very enthousiastic about working on projects that make a positive difference. Please do reach out to me, should you be interested in working together.</p>
+      </div>
+      <span class="helper"></span>
+      <div class="col-xs-4 col-xs-offset-0">
+        <%= image_tag ("group.jpg"), :class=>"image group" %>
+      </div>
     </div>
   </div>
 </div>
