--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,13 @@ body {
   font-size: 24px;
   line-height: 200%;
   padding-top: 5%;
+  display: inline-block;
+}
+
+.helper {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
 }
 
 .aboutme{
@@ -119,6 +126,16 @@ body {
 .image {
   width:100%;
   height:250px;
+}
+
+.personal-desc{
+  height:90px;
+}
+
+.group {
+  height:auto;
+  vertical-align: middle;
+  padding-top: 5%;
 }
 
 .interest .image {
