--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 .background-image {
-  background-image: image-url("gabriel.png");
+  background-image: image-url("gabriel.jpg");
   height:100%;
   background-size: cover;
 }
@@ -42,6 +42,10 @@ body {
   display: inline-block;
 }
 
+.bold-text {
+  font-weight: bolder;
+}
+
 .helper {
   display: inline-block;
   height: 100%;
@@ -71,13 +75,9 @@ body {
   text-align: center;
 }
 
-.projectrow{
-  padding-top: 5%;
-}
-
 .project{
   position: relative;
-  padding:0px;
+  padding: 0;
 }
 
 .caption, .interestText {
@@ -105,6 +105,7 @@ body {
 }
 .interestText {
   left: 10%;
+  right:10%;
   width: 80%;
 }
 
@@ -121,11 +122,6 @@ body {
 
 .interest-list {
   margin-top: 5%;
-}
-
-.image {
-  width:100%;
-  height:250px;
 }
 
 .personal-desc{
@@ -146,15 +142,12 @@ body {
 }
 
 .interest {
-  padding: 0;
   text-align: center;
   cursor:pointer;
 }
 
 .caption-text{
   position: absolute;
-  top:40%;
-  left:10%;
   text-align: center;
   font-size: 38px;
   font-weight: bold;
@@ -164,8 +157,9 @@ body {
   position: absolute;
   top:5%;
   left:0%;
+  right:0;
+  bottom: 0;
   text-align: center;
-  font-size: 24px;
   font-weight: bold;
 }
 
@@ -202,40 +196,9 @@ body {
   color:#22A39F;
 }
 
-.ability:hover{
-  background-color:#f6f6f6;
-  border-radius: 5px;
-}
-
-.ability{
-  padding:5px 0px;
-  height:30px;
-  line-height: 18px;
-}
-
-.ability:hover .ability-score{
-  transition-duration: 0.3s;
-  letter-spacing: 1px;
-}
-
-.ability-score{
-  text-align: right;
-  font-size: 18px;
-  line-height: 18px;
-}
-
-.ability-title{
-  font-size: 18px;
-}
-
-.abilityrow{
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
 .backimg1t{
   position: relative;
-  bottom: 0px;
+  bottom: 0px !important;
   left: 0px;
   width: 100%;
   height: 15vh;
@@ -249,27 +212,233 @@ body {
   background-image: url("whitetriangle bottomright.png");
   height:30vh;
   width: 100%;
+  bottom:0;
+  z-index:10;
 }
 
-.backimg1a{
-  position: relative;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 25vh;
-  background-size: 100% auto;
-  background-position: top;
-  background-repeat: no-repeat;
-  z-index: 10;
+* {
+  border:none;
+}
+
+@media only screen and (max-width: 1000px) {
+  .project {
+    margin-top: 3%;
+    width: 100%;
+    height:auto;
+  }
+  h1 {
+    color:blue;
+  }
+
+  .image {
+    width:100%;
+    height: auto;
+  }
+
+  .backimg1a{
+    position: relative;
+    top: 0px !important;
+    left: 0px;
+    width: 100%;
+    height: 15vh;
+    background-size: 100% auto;
+    background-position: top;
+    background-repeat: no-repeat;
+    z-index: 10;
+  }
+
+  .backimg1t{
+    position: relative;
+    bottom: 0px !important;
+    left: 0px;
+    width: 100%;
+    height: 15vh;
+    background-size: 100% auto;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    z-index: 10;
+  }
+  .interest {
+    margin-top: 4%;
+    padding-left: 0;
+    padding-right: 0;
+    height:400px;
+    .image {
+      height:400px;
+    }
+  }
+  .interest-content{
+    margin: 0;
+  }
+
+  .hackathon .image{
+    height:300px;
+  }
+
+  .ability:hover{
+    background-color:#f6f6f6;
+    border-radius: 5px;
+  }
+
+  .ability{
+    margin-top: 20px;
+    height:30px;
+    line-height: 24px;
+  }
+
+  .ability:hover .ability-score{
+    transition-duration: 0.3s;
+    letter-spacing: 1px;
+  }
+
+  .ability-score{
+    text-align: right;
+    font-size: 24px;
+    line-height: 24px;
+  }
+
+  .ability-title{
+    font-size: 24px;
+  }
+
+  .description {
+    padding-top: 15px;
+    font-size: 20px;
+  }
+
+  .tasks li{
+    font-size: 20px;
+    line-height: 34px;
+  }
+
+  .interest-content {
+    font-size: 32px;
+  }
+
+  .interestText{
+
+  }
+
+  .caption-text{
+    top:40%;
+    left:10%;
+    bottom:40%;
+    right:10%;
+  }
+
+}
+
+@media only screen and (min-width: 1000px) {
+
+  .projectrow{
+    padding-top: 5%;
+  }
+
+  .image {
+    width:100%;
+    height:250px;
+  }
+
+  .backimg1a{
+    position: relative;
+    top: 0px !important;
+    left: 0px;
+    width: 100%;
+    height: 25vh;
+    background-size: 100% auto;
+    background-position: top;
+    background-repeat: no-repeat;
+    z-index: 10;
+  }
+
+  .backimg1t{
+    position: relative;
+    bottom: 0px !important;
+    left: 0px;
+    width: 100%;
+    height: 15vh;
+    background-size: 100% auto;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    z-index: 10;
+  }
+  .interest {
+    padding: 0;
+  }
+
+  .hackathon .image{
+    height:150px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+  }
+
+  .hackathon:hover .image{
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+  }
+
+  .ability:hover{
+    background-color:#f6f6f6;
+    border-radius: 5px;
+  }
+
+  .ability{
+    padding:5px 0px;
+    height:30px;
+    line-height: 18px;
+  }
+
+  .ability:hover .ability-score{
+    transition-duration: 0.3s;
+    letter-spacing: 1px;
+  }
+
+  .ability-score{
+    text-align: right;
+    font-size: 18px;
+    line-height: 18px;
+  }
+
+  .ability-title{
+    font-size: 18px;
+  }
+
+  .abilityrow{
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .description {
+    padding-top: 15px;
+    font-size: 16px;
+  }
+
+  .tasks li{
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  .interest-content {
+    font-size: 24px;
+  }
+
+  .caption-text{
+    top:30%;
+    left:10%;
+    bottom:30%;
+    right:10%;
+  }
 }
 
 #backimg2a{
   background-image: url("whitetriangle topleft.png");
   width: 100%;
+  top:0;
 }
 
 #backimgtriangletopright{
   background-image: url("whitetriangle topright.png");
+  top:0;
   width: 100%;
 }
 
@@ -277,6 +446,7 @@ body {
   background-image: url("whitetriangle bottomleft.png");
   height:30vh;
   width: 100%;
+  bottom:0;
 }
 
 .changeimage{
@@ -315,12 +485,12 @@ body {
   possition: absolute;
   font-family: "Lucida Grande", Tahoma;
   font-size: 72px;
-  opacity:0.3;
   font-weight: lighter;
   text-align: center;
-  color:#000;
+  color:white;
   vertical-align: middle;
   padding:0px;
+  opacity: 0;
 }
 
 .icon {
@@ -347,15 +517,7 @@ body {
 }
 
 .hackathon .image{
-  height:150px;
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
   border-radius: 3px;
-}
-
-.hackathon:hover .image{
-  -webkit-filter: grayscale(0%);
-  filter: grayscale(0%);
 }
 
 .comingsoon{
@@ -408,14 +570,7 @@ body {
 }
 
 .description {
-  padding-top: 15px;
-  font-size: 16px;
   font-style: italic;
-}
-
-.tasks li{
-  font-size: 16px;
-  line-height: 26px;
 }
 
 .experience-list{
