--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -298,33 +298,39 @@
     <h4 class="title-quote">"A well rounded person is a knowledgeable person"</h4>
     <div class="interest-list">
       <div class="row">
-        <div class="col-xs-12 col-md-4 col-md-offset-0 interest drone">
-          <div class="interstCaption">
-            <span class="interest-title">Drones</span>
+        <div class="col-xs-12 col-md-4 col-md-offset-0 outer-interest drone">
+          <div class="col-xs-12 col-md-12 interest drone">
+            <div class="interstCaption">
+              <span class="interest-title">Drones</span>
+            </div>
+            <div class="interestText">
+              <span class="interest-content">The world of aviation fascinates me. <br> <br>Click to watch a video of my self-built drone.</span>
+            </div>
+            <%= image_tag ("drone.jpg"), :class=>"image row" %>
           </div>
-          <div class="interestText">
-            <span class="interest-content">The world of aviation fascinates me. <br> <br>Click to watch a video of my self-built drone.</span>
-          </div>
-          <%= image_tag ("drone.jpg"), :class=>"image row" %>
         </div>
 
-        <div class="col-xs-12 col-md-4 col-md-offset-0 interest">
-          <div class="interstCaption">
-            <span class="interest-title">Data Science</span>
+        <div class="col-xs-12 col-md-4 col-md-offset-0 outer-interest">
+          <div class="col-xs-12 col-md-12 interest">
+            <div class="interstCaption">
+              <span class="interest-title">Data Science</span>
+            </div>
+            <div class="interestText">
+              <span class="interest-content">I am fascinated by the power of data. <br>Click to download a recent data analysis project of mine.</span>
+            </div>
+            <%= image_tag ("datascience.jpg"), :class=>"image" %>
           </div>
-          <div class="interestText">
-            <span class="interest-content">I am fascinated by the power of data. <br>Click to download a recent data analysis project of mine.</span>
-          </div>
-          <%= image_tag ("datascience.jpg"), :class=>"image" %>
         </div>
-        <div class="col-xs-12 col-md-4 col-md-offset-0 interest">
-          <div class="interstCaption">
-            <span class="interest-title">Sailing</span>
+        <div class="col-xs-12 col-md-4 col-md-offset-0 outer-interest">
+          <div class="col-xs-12 col-md-12 interest">
+            <div class="interstCaption">
+              <span class="interest-title">Sailing</span>
+            </div>
+            <div class="interestText">
+              <span class="interest-content">I recently started sailing and fell in love with the sport</span>
+            </div>
+            <%= image_tag ("sailing.jpg"), :class=>"image" %>
           </div>
-          <div class="interestText">
-            <span class="interest-content">I recently started sailing and fell in love with the sport</span>
-          </div>
-          <%= image_tag ("sailing.jpg"), :class=>"image" %>
         </div>
       </div>
     </div>
