--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -9,7 +9,6 @@
       <div class="titleunderlign col-xs-4 col-xs-offset-4 col-md-2 col-md-offset-5">
       </div>
     </div>
-    <h4 class="title-quote">"Reach for the stars"</h4>
     <div class="row personal-desc">
       <span class="helper"></span>
       <div class="aboutmeContent col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-0">
@@ -36,7 +35,6 @@
       <div class="titleunderlign col-xs-4 col-xs-offset-4 col-md-2 col-md-offset-5">
       </div>
     </div>
-    <h4 class="title-quote">"Learn to learn"</h4>
     <div class="row">
       <h2 class="sub-title col-xs-11 col-xs-offset-1">Skills</h2>
       <div class="abilities-list col-xs-12 col-xs-offset-0">
@@ -244,29 +242,23 @@
       <div class="titleunderlign col-xs-4 col-xs-offset-4 col-md-2 col-md-offset-5">
       </div>
     </div>
-    <h4 class="title-quote">"You can do anything you set your mind to"</h4>
     <div class="project-list">
       <div class="projectrow row">
+        <div class="col-xs-12 col-md-4 col-md-offset-2 project">
+          <%= image_tag ("ecommerce.jpg"), :class=>"image" %>
+          <a href="https://still-garden-48532.herokuapp.com" target="_blank">
+          <span class="icon">
+            <span class="glyphicon glyphicon-new-window"></span>
+          </span>
+          </a>
+        </div>
         <div class="col-xs-12 col-md-4 col-md-offset-1 project">
-          <div class="caption">
-            <span class="caption-text">Self-Checkout App</span>
-          </div>
           <%= image_tag ("self-checkout.jpg"), :class=>"image",:options => { "data-toggle" => "modal", "data-target" => "#myModal"}%>
           <a href="https://www.youtube.com/watch?v=YYV5TtxQa0Y" target="_blank">
             <span class="icon">
               <span class="glyphicon glyphicon-new-window"></span>
             </span>
           </a>
-        </div>
-        <div class="col-xs-12 col-md-4 col-md-offset-2 project">
-          <div class="caption">
-            <span class="caption-text">Book-Writing App</span>
-          </div>
-          <%= image_tag ("book.jpg"), :class=>"image" %>
-          <a href="https://bookcolab.herokuapp.com/stories" target="_blank">
-          <span class="icon">
-            <span class="glyphicon glyphicon-new-window"></span>
-          </span>
         </div>
       </div>
     </div>
@@ -275,7 +267,7 @@
     </div>
     <div class="row github">
       <a href="https://github.com/gjjaeger" target="_blank">
-        <button class="col-xs-4 col-xs-offset-4 btn github-btn">Check out my github</button>
+        <button class="btn github-btn">Check out my github</button>
       </a>
 
     </div>
@@ -289,52 +281,6 @@
   </div>
 </section>
 <div class="container">
-  <div class="interests">
-    <h3 class="title">Other Interests</h3>
-    <div class="row">
-      <div class="titleunderlign col-xs-4 col-xs-offset-4 col-md-2 col-md-offset-5">
-      </div>
-    </div>
-    <h4 class="title-quote">"A well rounded person is a knowledgeable person"</h4>
-    <div class="interest-list">
-      <div class="row">
-        <div class="col-xs-12 col-md-4 col-md-offset-0 outer-interest drone">
-          <div class="col-xs-12 col-md-12 interest drone">
-            <div class="interstCaption">
-              <span class="interest-title">Drones</span>
-            </div>
-            <div class="interestText">
-              <span class="interest-content">The world of aviation fascinates me. <br> <br>Click to watch a video of my self-built drone.</span>
-            </div>
-            <%= image_tag ("drone.jpg"), :class=>"image row" %>
-          </div>
-        </div>
-
-        <div class="col-xs-12 col-md-4 col-md-offset-0 outer-interest">
-          <div class="col-xs-12 col-md-12 interest">
-            <div class="interstCaption">
-              <span class="interest-title">Data Science</span>
-            </div>
-            <div class="interestText">
-              <span class="interest-content">I am fascinated by the power of data. <br>Click to download a recent data analysis project of mine.</span>
-            </div>
-            <%= image_tag ("datascience.jpg"), :class=>"image" %>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-4 col-md-offset-0 outer-interest">
-          <div class="col-xs-12 col-md-12 interest">
-            <div class="interstCaption">
-              <span class="interest-title">Sailing</span>
-            </div>
-            <div class="interestText">
-              <span class="interest-content">I recently started sailing and fell in love with the sport</span>
-            </div>
-            <%= image_tag ("sailing.jpg"), :class=>"image" %>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="hackathons">
     <h3 class="title">Hackathons</h3>
     <div class="row">
@@ -394,7 +340,6 @@
       <div class="titleunderlign col-xs-4 col-xs-offset-4 col-md-2 col-md-offset-5">
       </div>
     </div>
-    <h4 class="title-quote">"Never stop learning"</h4>
     <div class="row">
       <div class="experience-list col-xs-12 col-md-5 col-md-offset-1">
         <h4 class="sub-title">Country Manager Coavmi  <span class="location"><span class="glyphicon glyphicon-map-marker"></span> Paris, France</span></h4>
@@ -419,30 +364,3 @@
   </div>
   <h3 class="image-title">Hong Kong 2017</h3>
 </section>
-<div class="container-fluid contact">
-  <h3 class="title">Contact</h3>
-  <div class="row">
-    <div id ="contactunderlign" class="titleunderlign col-xs-4 col-xs-offset-4 col-md-2 col-md-offset-5">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-6 col-xs-offset-3">
-      <a class="" href="https://www.linkedin.com/in/gabriel-jaeger-167811117" target="_blank">
-        <div class="row contactOption">
-          <div class="col-xs-2 col-md-1">
-            <%= image_tag ("linkedin.png"), :class=>"image" %>
-          </div>
-          <span class="col-xs-10 col-xs-offset-1 link">www.linkedin.com/in/gabriel-jaeger</span>
-        </div>
-      </a>
-      <a class="" href="mailto:gabrielm.jaeger@yahoo.de" target="_blank">
-        <div class="row contactOption">
-          <div class="col-xs-2 col-md-1">
-            <%= image_tag ("email.png"), :class=>"image" %>
-          </div>
-          <span class="col-xs-10 col-xs-offset-1 link">gabrielm.jaeger@yahoo.de</span>
-        </div>
-      </a>
-    </div>
-  </div>
-</div>
