--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -265,7 +265,7 @@
     <div class="col-xs-12 col-md-6 col-md-offset-3 comingsoon">
       <h2>More coming soon...</h2>
     </div>
-    <div class="row github">
+    <div class="github col-xs-12">
       <a href="https://github.com/gjjaeger" target="_blank">
         <button class="btn github-btn">Check out my github</button>
       </a>
