personal site complete

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,30 @@
 <footer>
-  <div class="footer-div">
-    <span class="email-address"><i class="fa fa-envelope general-icon"></i><a href="mailto:gabrielm.jaeger@yahoo.de" class="email-link"><span class="email-address-text small-text">gabrielm.jaeger@yahoo.de</span></a></span><a class="" href="https://www.linkedin.com/in/gabriel-jaeger-167811117" target="_blank"><span class="linkedin"><i class="fa fa-linkedin-square general-icon"></i><span class="linkedin-text small-text">www.linkedin.com/in/gabriel-jaeger</span></span></a><span class="copyright small-text">&copy Copyright GABRIELJAEGER</span></span>
-  </div>
+  <span class="align-right-container">
+    <a class="carousel-control left" href="#mainCarousel" role="button" data-slide="prev">
+      <span class="square-tab">
+        <i class="fa fa-chevron-left"></i>
+        <span class="sr-only">Previous</span>
+      </span>
+    </a>
+    <a class="carousel-control right" href="#mainCarousel" role="button" data-slide="next">
+      <span class="square-tab">
+        <i class="fa fa-chevron-right"></i>
+        <span class="sr-only">Next</span>
+      </span>
+    </a>
+
+    <span class="square-tab">
+
+    </span>
+    <a href="mailto:gabrieljaeger1@gmail.com">
+      <span class="square-tab">
+        <i class="fa fa-envelope-o"></i>
+      </span>
+    </a>
+    <a href="https://github.com/gjjaeger">
+      <span class="square-tab">
+        <i class="fa fa-github"></i>
+      </span>
+    </a>
+  </span>
 </footer>
