--- a/app/views/static_page/about.html.erb
+++ b/app/views/static_page/about.html.erb
@@ -7,7 +7,9 @@
     <span class="massive-text float-right">Eat</span>
     <span class="massive-text float-right orange">Code</span>
     <span class="massive-text float-right">Sleep</span>
-    <span class="my-title float-right">Freelance Web Developer / Creative - Gabriel Jaeger</span>
+    <div class="my-title-container">
+      <span class="my-title float-right">Freelance Web Developer / Creative - Gabriel M. Jaeger</span>
+    </div>
   </div>
   <div class="about-me-image-container">
     <%= image_tag('adventure.jpg', :class=>"about-me-image")%>
