--- a/app/views/layouts/_homepage_navbar.html.erb
+++ b/app/views/layouts/_homepage_navbar.html.erb
@@ -1,12 +1,12 @@
 <header class="homepage-navbar">
   <span class="align-right-container">
-    <%= link_to static_page_home_path do%>
+    <%= link_to home_path do%>
       <div class="nav-item"><span class="nav-item-content white">Home</span></div>
     <%end%>
-    <%= link_to static_page_aboutme_path do%>
+    <%= link_to about_path do%>
       <div class="nav-item"><span class="nav-item-content white">About me</span></div>
     <%end%>
-    <%= link_to static_page_portfolio_path do%>
+    <%= link_to portfolio_path do%>
       <div class="nav-item"><span class="nav-item-content white">Portfolio</span></div>
     <%end%>
     <div class="nav-item"><span class="nav-item-content white" id="contact-nav-item">Contact</span></div>
